syntax = "proto3";

option csharp_namespace = "AnimalHealth.Application.Models";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "Protos/contract.proto";
import "Protos/user.proto";
import "Protos/animal.proto";
import "Protos/infrastructure.proto";
import "Protos/report.proto";

service InspectionProto {
  rpc AddInspection(InspectionAddModel) returns (InspectionLookup);
  rpc UpdateInspection(InspectionModel) returns (DbSaveCondition);
  rpc DeleteInspection(InspectionLookup) returns (DbSaveCondition);
  rpc GetInspection(InspectionLookup) returns (InspectionModel);
  rpc GetInspections(google.protobuf.Empty) returns (InspectionModelList);
  rpc GetAnimalTypeReport(GetReport) returns (ReportModel);
  rpc GetDiseaseReport(GetReport) returns (ReportModel);
}

message InspectionModelList {
  repeated InspectionModel inspections = 1;
}

message InspectionAddModel {
  string featureBehaviour = 1;
  string animalCondition = 2;
  float temperature = 3;
  string skinCover = 4;
  string furCondition = 5;
  bool isNeedOperations = 6;
  string manipulations = 7;
  string treatment = 8;
  google.protobuf.Timestamp date = 9;
  UserModel user = 10;
  AnimalModel animal = 11;
  ContractModel contract = 12;
  DiseaseModel disease = 13;
  string injures = 14;
}

message InspectionLookup {
  int32 id = 1;
}

message InspectionModel {
  int32 id = 1;
  string featureBehaviour = 2;
  string animalCondition = 3;
  float temperature = 4;
  string skinCover = 5;
  string furCondition = 6;
  bool isNeedOperations = 7;
  string manipulations = 8;
  string treatment = 9;
  google.protobuf.Timestamp date = 10;
  UserModel user = 11;
  AnimalModel animal = 12;
  ContractModel contract = 13;
  DiseaseModel disease = 14;
  string injures = 15;
}

message DiseaseModel {
  int32 id = 1;
  string name = 2;
}